Fixed admin products alignment

--- a/src/app/admin/admin-products/admin-products.component.css
+++ b/src/app/admin/admin-products/admin-products.component.css
@@ -1,2 +1,2 @@
-#paginationControls {display:inline-block; width:1000px;} 
-#itemsPerPage {display:inline-block} 
+#paginationControls {display:inline-block;} 
+#itemsPerPage {display:inline-block;} 
